fix: FAQ question on mobile line height, and updated wording in a few answers for better consistency

--- a/src/styles/FAQ.module.css
+++ b/src/styles/FAQ.module.css
@@ -70,19 +70,24 @@
 
 .faqSection h5 {
   font-size: 1.5em;
+  line-height: 1.25em;
   font-weight: 600;
 }
 
 .faqSection p {
   font-size: 1.15em;
-  line-height: 1.2;
+  line-height: 1.2em;
   color: #eaeaea;
 }
 
 .faqSection ul {
   font-size: 1.15em;
-  line-height: 1.2;
+  line-height: 1.2em;
   color: #eaeaea;
+}
+
+.faqSection li {
+  margin: 4px;
 }
 
 /* Media Queries for FAQ Section */
